mobile first design, half work done

--- a/index.html
+++ b/index.html
@@ -1,13 +1,112 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="styles.scss">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css"
+        integrity="sha512-NhSC1YmyruXifcj/KFRWoC561YpHpc5Jtzgvbuzx5VozKpWvQ+4nXhPdFgmx8xqexRcpAglTj9sIBWINXa8x5w=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <img src="logo.svg" alt="logo">
+        <section>
+            <div></div>
+            <div></div>
+            <div></div>
+        </section>
+    </header>
+    <main>
+        <div class="graphic">
+            <img class="image-1" src="graphic.svg" alt="graphic">
+        </div>
+        <div class="container-1">
+            <p>LAUNCHING SOON</p>
+            <div class="flex-1">
+                <h1>An NFT like
+                    <br>
+                    no other
+                </h1>
+                <i>Dont miss out on the
+                    <br>
+                    release of our new NFT. Sign
+                    <br>
+                    up below to receive updates
+                    <br>
+                    when we go live.</i>
+                <button class="sign-up">Sign Up</button>
+            </div>
+        </div>
+
+        <div class="container-2">
+            <h2>Free NFT for early
+                <br>
+                birds
+            </h2>
+            <i>Sing up today and you'll get a Free
+                <br>
+                NFT when we launch
+            </i>
+        </div>
+
+        <div class="container-3">
+            <div>
+                <a href="#"><img src="1.svg" alt="1-logo"></a>
+            </div>
+
+            <div>
+                <a href="#"><img src="2.svg" alt="2-logo"></a>
+            </div>
+            <div>
+                <a href="#"><img src="4.svg" alt="4-logo"></a>
+            </div>
+
+            <div>
+                <a href="#"><img src="3.svg" alt="3-logo"></a>
+            </div>
+        </div>
+
+        <div class="container-4">
+            <h2>LE Super Rare
+                <br>
+                Auction
+            </h2>
+            <i>We have released four limited edition
+
+                <br>
+                NFTs early which can be bid on via
+
+                <br>
+                <a href="#">OpenSea.</a>
+            </i>
+        </div>
+
+        <div class="container-5">
+            <div>
+                <figure>
+                    <img src="ntf-1.svg" alt="nft-1">
+                    <div class="flex-2">
+                        <div>
+                            <figcaption>GLOOP SERIES</figcaption>
+                            <figcaption>Purple Man</figcaption>
+                            <figcaption>#12983</figcaption>
+                        </div>
+
+                        <div>
+                            <figcaption>TOP BID</figcaption>
+                            <figcaption>2.99 ETH</figcaption>
+                            <figcaption>1 day left</figcaption>
+                        </div>
+                    </div>
+                </figure>
+            </div>
+        </div>
+    </main>
 </body>
+
 </html>
