mobile first almost finished, modified some pictures

--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
         </section>
     </header>
     <main>
-        <div class="graphic">
-            <img class="image-1" src="graphic.svg" alt="graphic">
-        </div>
         <div class="container-1">
             <p>LAUNCHING SOON</p>
             <div class="flex-1">
@@ -89,24 +86,154 @@
         <div class="container-5">
             <div>
                 <figure>
-                    <img src="ntf-1.svg" alt="nft-1">
+                    <img class="nft" src="ntf-1.svg" alt="nft-1">
                     <div class="flex-2">
                         <div>
-                            <figcaption>GLOOP SERIES</figcaption>
-                            <figcaption>Purple Man</figcaption>
-                            <figcaption>#12983</figcaption>
+                            <figcaption class="fig-1">GLOOP SERIES</figcaption>
+                            <figcaption class="fig-2">Purple Man</figcaption>
+                            <figcaption class="fig-3">#12983</figcaption>
                         </div>
 
+                        <div class="flex-3">
+                            <figcaption class="fig-4">TOP BID</figcaption>
+                            <figcaption class="fig-2"><img class="eth-logo" src="eth.svg" alt="eth logo"> 2.99 ETH
+                            </figcaption>
+                            <figcaption class="fig-3">1 day left</figcaption>
+                        </div>
+                    </div>
+                </figure>
+            </div>
+
+            <div>
+                <figure>
+                    <img class="nft" src="nft-2.svg" alt="nft-2">
+                    <div class="flex-2">
                         <div>
-                            <figcaption>TOP BID</figcaption>
-                            <figcaption>2.99 ETH</figcaption>
-                            <figcaption>1 day left</figcaption>
+                            <figcaption class="fig-1">GLOOP SERIES</figcaption>
+                            <figcaption class="fig-2">Purple Man</figcaption>
+                            <figcaption class="fig-3">#12983</figcaption>
+                        </div>
+
+                        <div class="flex-3">
+                            <figcaption class="fig-4">TOP BID</figcaption>
+                            <figcaption class="fig-2"><img class="eth-logo" src="eth.svg" alt="eth logo"> 2.99 ETH
+                            </figcaption>
+                            <figcaption class="fig-3">1 day left</figcaption>
+                        </div>
+                    </div>
+                </figure>
+            </div>
+
+            <div>
+                <figure>
+                    <img class="nft" src="ntf-3.svg" alt="nft-3">
+                    <div class="flex-2">
+                        <div>
+                            <figcaption class="fig-1">GLOOP SERIES</figcaption>
+                            <figcaption class="fig-2">Purple Man</figcaption>
+                            <figcaption class="fig-3">#12983</figcaption>
+                        </div>
+
+                        <div class="flex-3">
+                            <figcaption class="fig-4">TOP BID</figcaption>
+                            <figcaption class="fig-2"><img class="eth-logo" src="eth.svg" alt="eth logo"> 2.99 ETH
+                            </figcaption>
+                            <figcaption class="fig-3">1 day left</figcaption>
+                        </div>
+                    </div>
+                </figure>
+            </div>
+
+            <div>
+                <figure>
+                    <img class="nft" src="ntf-4.svg" alt="nft-4">
+                    <div class="flex-2">
+                        <div>
+                            <figcaption class="fig-1">GLOOP SERIES</figcaption>
+                            <figcaption class="fig-2">Purple Man</figcaption>
+                            <figcaption class="fig-3">#12983</figcaption>
+                        </div>
+
+                        <div class="flex-3">
+                            <figcaption class="fig-4">TOP BID</figcaption>
+                            <figcaption class="fig-2"><img class="eth-logo" src="eth.svg" alt="eth logo"> 2.99 ETH
+                            </figcaption>
+                            <figcaption class="fig-3">1 day left</figcaption>
                         </div>
                     </div>
                 </figure>
             </div>
         </div>
+
+        <hr class="devider">
+
+        <div class="container-6">
+            <p>LAUNCHING SOON</p>
+            <div class="flex-1">
+                <h2>An NFT
+                    <br>
+                    like no
+                    <br>
+                    other
+                </h2>
+                <i>Dont miss out on the
+                    <br>
+                    release of our new
+                    <br>
+                    NFT. Sign up below
+                    <br>
+                    to receive updates.
+                </i>
+                <button class="sign-up">Sign Up</button>
+            </div>
+        </div>
+        <hr>
     </main>
+    <footer>
+        <div class="container-7">
+            <div class="flex-4">
+                <img src="logo.svg" alt="logo">
+                <i>Exclusive NFT Collection</i>
+
+                <div class="social-media">
+                    <img src="facebook.svg" alt="facebook">
+                    <img src="twitter.svg" alt="twitter">
+                    <img src="instagram.svg" alt="instagram">
+                    <img src="tiktok.svg" alt="tiktok">
+                </div>
+            </div>
+        </div>
+
+        <div class="container-8">
+            <div>
+                <ul>
+                    <p>ABOUT</p>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Terms</a></li>
+                    <li><a href="#">Legal</a></li>
+
+                    <p>NFT</p>
+                    <li><a href="#">OpenSea</a></li>
+                    <li><a href="#">Maker</a></li>
+                    <li><a href="#">Learn</a></li>
+                </ul>
+            </div>
+
+            <div>
+                <ul>
+                    <p>CONTACT</p>
+                    <li><a href="#">Press</a></li>
+                    <li><a href="#">Support</a></li>
+
+                    <p>SOCIAL</p>
+                    <li><a href="#">Twitter</a></li>
+                    <li><a href="#">Instagram</a></li>
+                </ul>
+            </div>
+
+            <p class="copy">&copy; Copyright 2022 NFTlanding</p>
+        </div>
+    </footer>
 </body>
 
 </html>
