--- a/index.html
+++ b/index.html
@@ -20,6 +20,13 @@
             <div></div>
             <div></div>
         </section>
+
+        <nav>
+            <a href="#">Features</a>
+            <a href="#">About</a>
+            <a href="#">Launch</a>
+            <a href="#"><span class="sign">Sign Up</span></a>
+        </nav>
     </header>
     <main>
         <div class="container-1">
@@ -191,9 +198,11 @@
     </main>
     <footer>
         <div class="container-7">
-            <div class="flex-4">
-                <img src="logo.svg" alt="logo">
-                <i>Exclusive NFT Collection</i>
+            <div class="flex-5">
+                <div class="flex-4">
+                    <img src="logo.svg" alt="logo">
+                    <i>Exclusive NFT Collection</i>
+                </div>
 
                 <div class="social-media">
                     <img src="facebook.svg" alt="facebook">
@@ -201,36 +210,44 @@
                     <img src="instagram.svg" alt="instagram">
                     <img src="tiktok.svg" alt="tiktok">
                 </div>
+                <p class="copy">&copy; Copyright 2022 NFTlanding</p>
+            </div>
+
+            <div class="flex-6">
+                <div>
+                    <ul>
+                        <p>ABOUT</p>
+                        <li><a href="#">About</a></li>
+                        <li><a href="#">Terms</a></li>
+                        <li><a href="#">Legal</a></li>
+
+                        <div class="li">
+                            <p>NFT</p>
+                            <li><a href="#">OpenSea</a></li>
+                            <li><a href="#">Maker</a></li>
+                            <li><a href="#">Learn</a></li>
+                        </div>
+                    </ul>
+                </div>
+
+                <div>
+                    <ul>
+                        <p>CONTACT</p>
+                        <li><a href="#">Press</a></li>
+                        <li><a href="#">Support</a></li>
+
+                        <div class="li">
+                            <p>SOCIAL</p>
+                            <li><a href="#">Twitter</a></li>
+                            <li><a href="#">Instagram</a></li>
+                        </div>
+                    </ul>
+                </div>
             </div>
         </div>
 
-        <div class="container-8">
-            <div>
-                <ul>
-                    <p>ABOUT</p>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Terms</a></li>
-                    <li><a href="#">Legal</a></li>
-
-                    <p>NFT</p>
-                    <li><a href="#">OpenSea</a></li>
-                    <li><a href="#">Maker</a></li>
-                    <li><a href="#">Learn</a></li>
-                </ul>
-            </div>
-
-            <div>
-                <ul>
-                    <p>CONTACT</p>
-                    <li><a href="#">Press</a></li>
-                    <li><a href="#">Support</a></li>
-
-                    <p>SOCIAL</p>
-                    <li><a href="#">Twitter</a></li>
-                    <li><a href="#">Instagram</a></li>
-                </ul>
-            </div>
-
+        <div class="flex-7">
+            <i class="launching">Launching August 2022</i>
             <p class="copy">&copy; Copyright 2022 NFTlanding</p>
         </div>
     </footer>
